--- a/Week-7-Import-Data-1.Rmd
+++ b/Week-7-Import-Data-1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Import Data"
-output: html_notebook
+output: github_notebook
 ---
 
 ```{r setup, include=FALSE}
@@ -48,7 +48,8 @@ To import `nimbus.csv`, use the readr functions that reads `.csv` files, `read_c
 Save nimbus.csv into your project folder on the server or your computer. Then read it into an object. Then view the results.
 
 ```{r}
-
+numbus <- read_csv("Data/
+                   nimbus.csv")
 ```
 
 Notice that the code above saves the output to an object named nimbus. You must save the output of `read_csv()` to an object if you wish to use it later. If you do not save the output, `read_csv()` will merely print the contents of the data set at the command line.
@@ -76,8 +77,9 @@ If you examine `nimbus` closely, you will notice that the initial values in the 
 If you'd like R to treat these `.` values as missing values (and you should) you will need to convert them to `NA`s. One way to do this is to ask `read_csv()` to parse `.` values as `NA` values when it reads in the data. To do this add the argument `na = "."` to `read_csv()`:
 
 ## Your Turn 2
-```{r eval = FALSE}
-nimbus <- read_csv("nimbus.csv", na = "___")
+```{r}
+  nimbus <- read_csv("Data/nimbus.csv", na = ".")
+View(nimbus)
 ```
 
 You can set `na` to a single character string or a vector of character strings. `read_csv()` will transform every value listed in the `na` argument to an `NA` when it reads in the data.
@@ -92,9 +94,9 @@ To do this, add the argument `col_types` to `read.csv()` and set it equal to a l
 
 ## Your Turn 3
 ```{r}
-nimbus <- read_csv("nimbus.csv", na = ".",
-                   col_types = list(ozone = ____________,
-                                    date = _____________)
+nimbus <- read_csv("Data/nimbus.csv", na = ".",
+                   col_types = list(ozone = col_double(),
+                                    date = col_datetime()))
 ```
 
 To complete the code, set `ozone` equal to one of the functions below, each function instructs `read_csv()` to parse `ozone` as a specific type of data.
@@ -122,6 +124,8 @@ Now that we have our data, we can use it to plot a picture of the hole in the oz
 
 ```{r}
 #install maps and mapproj
+#install.packages("map")
+#install.packages("mapproj")
 library(maps) 
 library(mapproj)
 world <- map_data(map = "world")
@@ -151,7 +155,7 @@ Function            | Writes
 To use a write function, first give it the name of the data frame to save, then give it a filepath from your working directory to the location where you would like to save the file. This filepath should end in the name of the new file. So we can save the clean `nimbus` data set as a csv in our working directory with 
 
 ```{r}
-write_csv(______, path = "________.csv")
+write_csv(nimbus, path = "Data/nimbus_clean.csv")
 ```
 
 
@@ -163,8 +167,14 @@ Look at the data for salaries, ages, and percent free throws/3 pointers for the 
 * there are % symbols attached to the FG% and 3P% variables
 * we only want the most recent year's salary
 
-```{r}
-gsw<-read_csv("GSWdata.csv")
+```{r eval = FALSE}
+gsw<-read_csv("Data/GSWdata.csv", na ="N/A",
+              col_types = list(Player = col_character(),
+                               Age = col_double(),
+                               `2019-20` = col_skip(),
+                               `2020-21` = col_number(),
+                               `FG%`  = col_number(),
+                               `3P%`  = col_number()))
 ```
 
 
@@ -174,7 +184,7 @@ The `janitor` package can help you clean up the names of your variables to make 
 
 ```{r}
 #install.packages("janitor")
-janitor::clean_names(gsw) %>% write_csv("new_gsw.csv")
+janitor::clean_names(gsw) %>% write_csv("Data/new_gsw.csv")
 ```
 
 
